--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -744,3 +744,10 @@ form textarea.tyr-markup-editor {
     }
   }
 }
+
+.ant-table-filter-trigger .anticon {
+  top: auto;
+  left: auto;
+  bottom: 16px;
+  right: 2px;
+}
