--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -191,7 +191,7 @@ $primary-background-color: #6a8fbe;
   }
 
   thead > tr > th {
-    background-color: inherit !important;
+    //background-color: inherit !important;
     border-bottom-color: $border-color !important;
     font-size: 14px;
     font-weight: bolder;
