--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -9,6 +9,27 @@ $text-highlight-color: #7f3f00;
 $primary-background-color: #6a8fbe;
 
 .tyr-table {
+  width: calc(100% - 32px);
+  margin: 0 16px;
+
+  .tyr-table-header {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 10px;
+
+    .ant-checkbox-wrapper {
+      padding-left: 10px;
+    }
+
+    & > span {
+      white-space: nowrap;
+    }
+
+    button {
+      margin-right: 8px;
+      height: 39px;
+    }
+  }
   // see applyFixedWidthHack
   .td-width {
     overflow: hidden;
@@ -81,6 +102,10 @@ $primary-background-color: #6a8fbe;
     }
   }
 
+  .ant-table-header {
+    border-left: 1px solid #ccc;
+  }
+
   .tyr-action-column {
     .ant-table-column-title {
       .anticon {
@@ -106,211 +131,222 @@ $primary-background-color: #6a8fbe;
 
   .ant-table {
     border: none;
+    background: transparent;
+
+    .ant-table-container {
+      background: #fff;
+    }
 
     .ant-col .ant-calendar-picker-icon {
       z-index: 0;
     }
 
-    .ant-table-title,
-    .ant-table-footer {
-      padding-right: 0;
-      padding-left: 0;
-      background-color: $background-color;
-    }
-  }
+    //.ant-table-title {
+    //padding-right: 0;
+    //padding-left: 0;
+    //background-color: $background-color;
+    //}
 
-  .ant-table-body > table {
-    padding: 0;
+    .ant-table-body > table {
+      padding: 0;
 
-    .ant-table-selection-column
-      + .ant-table-fixed-columns-in-body
-      + td
-      .tyr-table-cell {
-      padding-left: 18px;
-    }
-    .ant-table-selection-column
-      + .ant-table-fixed-columns-in-body
-      + th
-      .ant-table-header-column {
-      padding-left: 18px;
-    }
-  }
-
-  .ant-table-row {
-    cursor: pointer;
-
-    .ant-form-item {
-      margin-bottom: 0;
-
-      .ant-calendar-picker-icon {
-        display: none;
+      .ant-table-selection-column
+        + .ant-table-fixed-columns-in-body
+        + td
+        .tyr-table-cell {
+        padding-left: 18px;
+      }
+      .ant-table-selection-column
+        + .ant-table-fixed-columns-in-body
+        + th
+        .ant-table-header-column {
+        padding-left: 18px;
       }
     }
-  }
 
-  &.tyr-table-editing-row {
-    .ant-table-wrapper .ant-pagination {
-      display: none;
+    .ant-table-row {
+      cursor: pointer;
+
+      .ant-form-item {
+        margin-bottom: 0;
+
+        .ant-calendar-picker-icon {
+          display: none;
+        }
+      }
     }
 
-    .ant-table-column-has-filters .ant-dropdown-trigger,
-    .ant-table-column-sorter {
-      visibility: hidden;
-    }
-  }
+    &.tyr-table-editing-row {
+      .ant-table-wrapper .ant-pagination {
+        display: none;
+      }
 
-  .ant-table-tbody > tr.tyr-editable-row > td {
-    padding-top: 4px !important;
-    padding-bottom: 4px !important;
-  }
-
-  .tyr-table-new-document table td {
-    border-width: 0 !important;
-  }
-
-  .ant-table-placeholder {
-    margin: 10px 10px 20px 10px;
-    border-radius: 6px;
-  }
-
-  .ant-table-wrapper:not(.tyr-table-new-document) {
-    .ant-table-body {
-      min-height: 493px;
+      .ant-table-column-has-filters .ant-dropdown-trigger,
+      .ant-table-column-sorter {
+        visibility: hidden;
+      }
     }
 
-    .ant-table-body + .ant-table-placeholder {
-      display: none;
+    .ant-table-tbody > tr.tyr-editable-row > td {
+      padding-top: 4px !important;
+      padding-bottom: 4px !important;
     }
 
-    .ant-table-pagination.ant-pagination {
-      text-align: center;
-      margin: 0;
-      margin-top: 10px;
-      float: none;
+    .tyr-table-new-document table td {
+      border-width: 0 !important;
     }
-  }
 
-  thead > tr > th {
-    //background-color: inherit !important;
-    border-bottom-color: $border-color !important;
-    font-size: 14px;
-    font-weight: bolder;
+    .ant-table-placeholder {
+      margin: 10px 10px 20px 10px;
+      border-radius: 6px;
+    }
 
-    &.ant-table-selection-column {
+    .ant-table-wrapper:not(.tyr-table-new-document) {
+      .ant-table-body {
+        min-height: 493px;
+      }
+
+      .ant-table-body + .ant-table-placeholder {
+        display: none;
+      }
+
+      .ant-table-pagination.ant-pagination {
+        text-align: center;
+        margin: 0;
+        margin-top: 10px;
+        float: none;
+      }
+    }
+
+    thead > tr > th {
+      vertical-align: bottom;
+      border-top: 1px solid #ccc;
+      border-right: 1px solid #ccc;
+      border-bottom: 2px solid #888;
+
+      &.tyr-action-column {
+        border-right: none;
+      }
+
+      //border-bottom-color: $border-color !important;
+      font-size: 14px;
+      font-weight: bolder;
+
+      i.anticon-filter {
+        top: unset;
+        height: auto;
+        top: auto;
+        left: auto;
+        bottom: 16px;
+        right: 2px;
+      }
+
+      &.ant-table-selection-column {
+        min-width: 42px;
+        width: 42px;
+      }
+
+      .ant-table-filter-selected {
+        background: $popup-background-color;
+      }
+
+      .ant-table-header-column .ant-table-column-title {
+        white-space: nowrap;
+      }
+
+      .ant-table-column-sorter span {
+        height: 6px;
+
+        i {
+          color: $text-color;
+        }
+
+        .anticon {
+          font-size: 13px;
+        }
+      }
+
+      .ant-table-column-sorter span.on {
+        i {
+          color: $text-highlight-color;
+        }
+      }
+    }
+
+    .ant-table-tbody > tr > td.ant-table-selection-column {
       min-width: 42px;
       width: 42px;
     }
 
-    .ant-table-filter-selected {
-      background: $popup-background-color;
+    td {
+      background-color: white;
+      border-width: 0 0 1px 0 !important;
+      border-color: $light-border-color;
+      //border-bottom-color: $border-color !important;
+      background-color: white;
+
+      .ant-radio {
+        zoom: 1.3;
+      }
+
+      .ant-radio-inner:after {
+        display: inherit;
+      }
     }
 
-    .ant-table-header-column .ant-table-column-title {
-      white-space: nowrap;
+    .ant-table-bordered {
+      td {
+        border-width: 1px 1px !important;
+      }
+      td:first-child {
+        border-left-width: 0 !important;
+      }
+      .ant-table-title,
+      .ant-table-footer {
+        border: none !important;
+      }
     }
 
-    .ant-table-column-sorter span {
-      height: 6px;
+    .ant-table-filter-dropdown-link {
+      border: 1px;
+      border-style: solid;
+      border-color: $border-color;
+      padding: 0 8px;
+      border-radius: 5;
+      color: $text-color;
+      text-decoration: none;
+    }
 
+    .ant-table-filter-dropdown-link.confirm {
+      border-color: $border-color;
+      color: $background-color;
+      background-color: $primary-background-color;
+    }
+
+    .ant-table-filter-icon {
       i {
         color: $text-color;
+        position: relative;
+        top: 3px;
       }
 
-      .anticon {
-        font-size: 13px;
-      }
-    }
-
-    .ant-table-column-sorter span.on {
-      i {
+      i.active {
         color: $text-highlight-color;
       }
     }
-  }
 
-  .ant-table-tbody > tr > td.ant-table-selection-column {
-    min-width: 42px;
-    width: 42px;
-  }
-
-  td {
-    background-color: white;
-    border-width: 1px 0 !important;
-    border-color: $border-color;
-    border-bottom-color: $border-color !important;
-    border-style: solid !important;
-    background-color: white;
-
-    .ant-radio {
-      zoom: 1.3;
+    .ant-spin {
+      position: absolute;
     }
 
-    .ant-radio-inner:after {
-      display: inherit;
+    .tyr-table-cell {
+      line-height: 1.2;
     }
-  }
 
-  .ant-table-bordered {
-    td {
-      border-width: 1px 1px !important;
-    }
-    td:first-child {
-      border-left-width: 0 !important;
-    }
-    .ant-table-title,
     .ant-table-footer {
-      border: none !important;
+      padding: 8px 0;
+      background-color: transparent;
     }
-  }
-
-  .ant-table-filter-dropdown-link {
-    border: 1px;
-    border-style: solid;
-    border-color: $border-color;
-    padding: 0 8px;
-    border-radius: 5;
-    color: $text-color;
-    text-decoration: none;
-  }
-
-  .ant-table-filter-dropdown-link.confirm {
-    border-color: $border-color;
-    color: $background-color;
-    background-color: $primary-background-color;
-  }
-
-  .ant-table-filter-icon {
-    i {
-      color: $text-color;
-      position: relative;
-      top: 3px;
-    }
-
-    i.active {
-      color: $text-highlight-color;
-    }
-  }
-
-  .ant-spin {
-    position: absolute;
-  }
-
-  .tyr-table-cell {
-    line-height: 1.2;
-  }
-}
-
-.tyr-table-header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-
-  .ant-checkbox-wrapper {
-    padding-left: 10px;
-  }
-
-  & > span {
-    white-space: nowrap;
   }
 }
 
@@ -743,11 +779,4 @@ form textarea.tyr-markup-editor {
       }
     }
   }
-}
-
-.ant-table-filter-trigger .anticon {
-  top: auto;
-  left: auto;
-  bottom: 16px;
-  right: 2px;
 }
