work on ant 4 upgrade

--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -232,7 +232,7 @@ $primary-background-color: #6a8fbe;
       font-size: 14px;
       font-weight: bolder;
 
-      i.anticon-filter {
+      .anticon.anticon-filter {
         top: unset;
         height: auto;
         top: auto;
