--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -222,7 +222,7 @@ $primary-background-color: #6a8fbe;
       vertical-align: bottom;
       border-top: 1px solid #ccc;
       border-right: 1px solid #ccc;
-      border-bottom-width: 0px;
+      border-bottom: 2px solid #888;
 
       &.tyr-action-column {
         border-right: none;
