--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -246,6 +246,15 @@ $primary-background-color: #6a8fbe;
         width: 42px;
       }
 
+      .ant-table-column-sorter {
+        position: relative;
+
+        .ant-table-column-sorter-inner {
+          position: absolute;
+          bottom: 2px;
+        }
+      }
+
       .ant-table-filter-selected {
         background: $popup-background-color;
       }
@@ -405,6 +414,12 @@ $primary-background-color: #6a8fbe;
 
   .ant-modal-header {
     padding: 16px;
+  }
+
+  .ant-modal-footer {
+    .ant-btn {
+      margin-left: 8px;
+    }
   }
 }
 
@@ -707,7 +722,7 @@ $primary-background-color: #6a8fbe;
     padding: 12px;
     text-align: right;
 
-    button {
+    .ant-btn {
       margin-left: 8px;
     }
   }
