--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -12,6 +12,8 @@
   --text-highlight-color: #7f3f00;
   --text-delete-color: var(--text-highlight-color);
 
+  --table-fixed-column-background-color: #fcfcfc;
+
   --filter-background-color: #f6f6f6;
   --filter-border-color: #eee;
   --filter-footer-border-top-color: #e8e8e8;
@@ -96,6 +98,10 @@
 
   .date {
     display: block;
+  }
+
+  .anticon {
+    color: var(--primary-background-color);
   }
 }
 
@@ -347,6 +353,18 @@ form textarea.tyr-markup-editor {
   //320, 340, 360, 380, 400, 420, 440, 460, 480, 500, 520, 540, 560, 580, 600,
   //620, 640, 660, 680, 700, 720, 740, 760, 780, 800, 820, 840, 860, 880, 900,
   //920, 940, 960, 980, 1000, 1020, 1040, 1060, 1080, 1100, 1120, 1140, 1160,
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
+  --table-fixed-column-background-color: #fcfcfc;
   //1180, 1200, 1220, 1240, 1260, 1280, 1300, 1320, 1340, 1360, 1380, 1400, 1420,
   //1440, 1460, 1480, 1500, 1520, 1540, 1560, 1580, 1600, 1620, 1640, 1660, 1680,
   //1700, 1720, 1740, 1760, 1780, 1800, 1820, 1840, 1860, 1880, 1900, 1920, 1940,
@@ -433,6 +451,10 @@ form textarea.tyr-markup-editor {
     .ant-table-measure-row td {
       height: 1px !important;
       color: var(--major-border-color);
+    }
+
+    .ant-table-cell-fix-left {
+      background-color: var(--table-fixed-column-background-color);
     }
 
     .ant-table-title,
@@ -659,7 +681,7 @@ form textarea.tyr-markup-editor {
         a,
         button,
         div {
-          height: 30px;
+          height: 32px;
           margin: 0 0 0 4px;
 
           &:first-child {
@@ -672,6 +694,7 @@ form textarea.tyr-markup-editor {
 
   &.tyr-table-editing-row,
   &.tyr-table-adding-row {
+    .anticon-filter,
     .ant-pagination {
       display: none;
     }
@@ -679,6 +702,17 @@ form textarea.tyr-markup-editor {
     //.ant-table-column-sorter
     .ant-table-column-has-filters .ant-dropdown-trigger {
       visibility: hidden;
+    }
+  }
+
+  .ant-table.ant-table-middle thead > tr > th {
+    padding: 6px 3px;
+  }
+
+  .ant-checkbox-wrapper {
+    .ant-checkbox {
+      position: relative;
+      top: -1px;
     }
   }
 }
