--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -749,6 +749,7 @@ form textarea.tyr-markup-editor {
 .tyr-kanban {
   display: flex;
   height: 800px;
+  width: 100%;
 
   .tyr-kanban-column {
     display: flex;
