only specific icons override color

--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -107,7 +107,10 @@
   }
 
   .anticon {
-    color: var(--primary-background-color);
+    &.anticon-search,
+    &.anticon-down {
+      color: var(--primary-background-color);
+    }
   }
 }
 
