--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -827,6 +827,29 @@ form textarea.tyr-markup-editor {
     .ant-btn {
       margin-left: 8px;
     }
+
+    .tyr-footer-container {
+      display: flex;
+      justify-content: space-between;
+
+      .left-side {
+        .reset-line {
+          .ant-btn {
+            margin-left: 0;
+            padding-left: 0;
+            padding-right: 0;
+          }
+
+          .reset-label {
+            font-weight: bolder;
+          }
+        }
+      }
+
+      .right-side {
+        text-align: right;
+      }
+    }
   }
 }
 
@@ -956,6 +979,16 @@ form textarea.tyr-markup-editor {
         font-size: 0.7em;
         font-style: italic;
         opacity: 0.7;
+      }
+
+      .anticon {
+        color: var(--highlight-color);
+        margin-left: 5px;
+
+        &.anticon-filter {
+          zoom: 0.8;
+          margin-bottom: 1px;
+        }
       }
     }
 
