--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -803,6 +803,18 @@ form textarea.tyr-markup-editor {
 }
 
 //
+// Decorators -- Panels
+//
+
+.tyr-panel {
+  padding: 8px;
+
+  .tyr-panel-header {
+    font-size: 20px;
+  }
+}
+
+//
 // Decorators -- Modals
 //
 
