--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -740,6 +740,21 @@ form textarea.tyr-markup-editor {
   }
 }
 
+.tyr-table .react-resizable {
+  position: relative;
+  background-clip: padding-box;
+}
+
+.tyr-table .react-resizable-handle {
+  position: absolute;
+  width: 10px;
+  height: 100%;
+  bottom: 0;
+  right: -5px;
+  cursor: col-resize;
+  z-index: 1;
+}
+
 .ant-table-filter-dropdown {
   position: relative;
   top: -2px;
