--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -753,6 +753,7 @@ form textarea.tyr-markup-editor {
   right: -5px;
   cursor: col-resize;
   z-index: 1;
+  background-image: none;
 }
 
 .ant-table-filter-dropdown {
