--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -542,6 +542,7 @@ form textarea.tyr-markup-editor {
 
 .tyr-filter-summary {
   display: inline-block;
+  margin: 4px 0 0;
 
   .tyr-tag + .tyr-tag {
     margin-left: 8px;
