--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -662,6 +662,14 @@ form textarea.tyr-markup-editor {
     }
   }
 
+  .tyr-editable-row td.ant-table-cell {
+    padding: 0 6px;
+
+    &.tyr-action-column {
+      padding: 0;
+    }
+  }
+
   .tyr-action-column {
     .ant-table-column-title {
       .anticon {
