work on share token

--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -182,7 +182,8 @@
 //}
 
 .tyr-action-save,
-.ant-btn.tyr-action-save {
+.ant-btn.tyr-action-save,
+.ant-btn-primary {
   color: var(--primary-text-color);
   background-color: var(--primary-background-color);
 }
