Drawer fixes (multi select max height and scrollTo(0,0) when drawer opens

--- a/packages/tyreant/tyreant.scss
+++ b/packages/tyreant/tyreant.scss
@@ -500,6 +500,11 @@ form textarea.tyr-markup-editor {
           max-height: 200px;
         }
       }
+
+      .ant-table-filter-dropdown {
+        max-height: 150px;
+        overflow: auto;
+      }
     }
   }
 
